# git-verify

./: CMakeLists.txt  LICENSE  README.md  Readme.adoc  common.h  configLoader.cpp  configLoader.h  gitWrapper.cpp  gitWrapper.h  log.h  main.cpp  meson.build  messages.h  taskBase.cpp  taskBase.h  taskCreator.cpp  taskCreator.h
pstream/: pstream.h
